--- a/AutoCmdb/templates/user/base.html
+++ b/AutoCmdb/templates/user/base.html
@@ -17,7 +17,7 @@
 
     <ul class="nav nav-sidebar">
         <li><a href="/host/index">主機管理</a></li>
-        <li><a href="/asset/index">運維管理</a></li>
+        <li><a href="/asset/index">資產管理</a></li>
     </ul>
 
 
