--- a/AutoCmdb/templates/user/userinfo.html
+++ b/AutoCmdb/templates/user/userinfo.html
@@ -66,7 +66,7 @@
 
             <div class="col-md-6 form-group">
                 <label class="col-form-label">性別</label>
-                <select id='sex_add' name="sex" class="form-control">
+                <select disabled id='sex_add' name="sex" class="form-control">
 
                     <option value="">-------</option>
                     {% for sex in userinfo_obj.sex_choice %}
@@ -82,14 +82,14 @@
 
             <div class="col-md-6 form-group">
                 <label class="col-form-label">用戶名</label>
-                <input type="text" name="username" class="form-control" placeholder=""
+                <input disabled type="text" name="username" class="form-control" placeholder=""
                        value="{{ userinfo_obj.user.username }}">
             </div>
 
 
             <div class="col-md-6  form-group">
                 <label class="col-form-label">暱稱</label>
-                <input type="text" name="name" class="form-control" placeholder="" value="{{ userinfo_obj.name }}">
+                <input disabled type="text" name="name" class="form-control" placeholder="" value="{{ userinfo_obj.name }}">
             </div>
 
 
