--- a/AutoCmdb/templates/test/test2.html
+++ b/AutoCmdb/templates/test/test2.html
@@ -38,6 +38,8 @@
                     {% csrf_token %}
                     {{ forms_obj }}
 
+                    <h1>h1{{ forms_obj. }}</h1>
+
 
                     <button type="submit" class="btn btn-primary">send</button>
                 </form>
