--- a/AutoCmdb/templates/test/test2.html
+++ b/AutoCmdb/templates/test/test2.html
@@ -36,10 +36,10 @@
 
                 <form action="" method="POST">
                     {% csrf_token %}
-                    {{ forms_obj }}
 
-                    <h1>h1{{ forms_obj. }}</h1>
+                    {{ forms_userproinfo_obj }}
 
+                    {{ forms_user_obj }}
 
                     <button type="submit" class="btn btn-primary">send</button>
                 </form>
