--- a/AutoCmdb/templates/test/test2.html
+++ b/AutoCmdb/templates/test/test2.html
@@ -31,17 +31,65 @@
     <div class="panel panel-default" style="padding: 20px">
 
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-12">
 
 
-                <form action="" method="POST">
+                <form action="" method="POST" onsubmit="BeforeFormSubmit()">
                     {% csrf_token %}
 
-                    {{ forms_userproinfo_obj }}
+
+                    <div class="form-group">
+                        <label> 基本信息</label>
+                    </div>
+
+
+                    <div class="form-group col-md-6">
+                        <label class="col-form-label">編號</label>
+                        <input disabled type="number" name="code" class="form-control" placeholder=""
+                               value="{{ userinfo_obj.dent.block_number }}{{ userinfo_obj.code }}">
+
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label class="col-form-label">用戶名</label>
+                        {{ forms_user_obj.username }}
+
+                    </div>
+
+
+                    <div class="form-group col-md-6">
+                        {{ forms_userproinfo_obj.sex.label }}
+                        {{ forms_userproinfo_obj.sex }}
+
+                    </div>
+
+
+                    <div class="form-group col-md-6">
+                        {{ forms_userproinfo_obj.dent.label }}
+                        {{ forms_userproinfo_obj.dent }}
+
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        <label class="col-form-label">用戶名</label>
+                        {{ forms_user_obj.username }}
+
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        <label class="col-form-label">用戶名</label>
+                        {{ forms_user_obj.username }}
+
+                    </div>
+
+
+                    <div class="form-group">
+                        <label> 登入功能</label>
+                    </div>
+
 
                     {{ forms_user_obj }}
 
-                    <button type="submit" class="btn btn-primary">send</button>
+                    <button id="submit" type="submit" class="btn btn-primary">send</button>
                 </form>
             </div>
 
@@ -63,6 +111,10 @@
 
     <script>
 
+
+        function BeforeFormSubmit(e) {
+            $(":disabled").removeAttr("disabled");
+        }
 
     </script>
 
