--- a/AutoCmdb/templates/user/userinfo.html
+++ b/AutoCmdb/templates/user/userinfo.html
@@ -24,7 +24,6 @@
         }
 
         .form-control-static {
-
             border: 1px solid #ccc;
             border-radius: 4px;
         }
@@ -50,7 +49,8 @@
 
 
     <div class="panel panel-default" style="padding: 20px">
-        <form method="post" id="userform_add">
+        <form method="post" id="userform_add" onsubmit="BeforeFormSubmit()">
+            {% csrf_token %}
 
 
             <div class="form-group">
@@ -65,62 +65,34 @@
 
 
             <div class="col-md-6 form-group">
-                <label class="col-form-label">性別</label>
-                <select disabled id='sex_add' name="sex" class="form-control">
-
-                    <option value="">-------</option>
-                    {% for sex in userinfo_obj.sex_choice %}
-                        {% if sex.0 == userinfo_obj.sex %}
-                            <option selected value="{{ sex.0 }}">{{ sex.1 }}</option>
-                        {% else %}
-                            <option value="{{ sex.0 }}">{{ sex.1 }}</option>
-                        {% endif %}
-                    {% endfor %}
-                </select>
-            </div>
-
-
-            <div class="col-md-6 form-group">
                 <label class="col-form-label">用戶名</label>
-                <input disabled type="text" name="username" class="form-control" placeholder=""
-                       value="{{ userinfo_obj.user.username }}">
+                {{ forms_user_obj.username }}
             </div>
-
 
             <div class="col-md-6  form-group">
-                <label class="col-form-label">暱稱</label>
-                <input disabled type="text" name="name" class="form-control" placeholder="" value="{{ userinfo_obj.name }}">
+                <label class="col-form-label">姓名</label>
+                {{ forms_userproinfo_obj.name }}
+            </div>
+
+            <div class="col-md-6 form-group">
+                <label class="col-form-label">性別</label>
+                {{ forms_userproinfo_obj.sex }}
             </div>
 
 
             <div class="col-md-6  form-group">
                 <label class="col-form-label">部門</label>
-                <select name="dent" class="form-control">
-                    <option value="">-------</option>
-                    {% for department in dent_obj %}
-
-                        {% if userinfo_obj.dent == department %}
-                            <option selected value="{{ department.id }}">{{ department.name }}部({{ department.code }})
-                            </option>
-                        {% else %}
-                            <option value="{{ department.id }}">{{ department.name }}部({{ department.code }})</option>
-                        {% endif %}
-                    {% endfor %}
-
-                </select>
+                {{ forms_userproinfo_obj.dent }}
             </div>
 
             <div class="col-md-6  form-group">
                 <label class="col-form-label">生日</label>
-                <input type="text" name="name" class="form-control" placeholder="" value="1988/10/26">
+                {{ forms_userproinfo_obj.birthday }}
             </div>
 
             <div class="form-group" style="padding-left:15px;    padding-right: 15px; ">
                 <label> 在職狀態</label>
-                <select name="dent" class="form-control">
-                    <option value="">在職</option>
-                    <option value="">離職</option>
-                </select>
+                {{ forms_userproinfo_obj.in_service }}
             </div>
 
 
@@ -131,31 +103,25 @@
             <div class="form-inline" style="padding-right: 15px; ">
                 <label class="col-md-2  col-form-label">狀態</label>
 
-                <select name="dent" class="col-md-10  form-control-static" style="margin-bottom: 10px">
-                    <option value="">是</option>
-                    <option value="">否</option>
-                </select>
+               {{ forms_user_obj.is_staff }}
             </div>
 
             <div class="form-inline" style="padding-right: 15px; ">
                 <label class="col-md-2  col-form-label">密碼</label>
 
-                <input type="text" name="" class="col-md-10  form-control-static" placeholder=""
-                       value="******" style="margin-bottom: 10px">
+                {{ forms_user_obj.password1 }}
             </div>
 
 
             <div class="form-inline" style="padding-right: 15px; ">
                 <label class="col-md-2  col-form-label">確認密碼</label>
 
-                <input type="text" name="" class="col-md-10  form-control-static" placeholder=""
-                       value="******" style="margin-bottom: 10px">
+                {{ forms_user_obj.password2 }}
             </div>
 
 
             <div class="form-group">
-
-                <button id="userform_submit" type="button" class="btn btn-primary center-block">更改</button>
+                <button id="userform_submit" type="submit" class="btn btn-primary center-block">更改</button>
             </div>
 
 
@@ -166,6 +132,31 @@
 
 
 {% endblock %}
+
+
+
+
+
+{% block extra-js %}
+
+    <script>
+        function BeforeFormSubmit(e) {
+            $(":disabled").removeAttr("disabled");
+        }
+
+
+        $("input[name='birthday']").datepicker(
+                {
+                    language: 'zh-TW',
+                    format: "yyyy-mm-dd",
+                    todayHighlight: true,
+
+                });
+
+    </script>
+
+{% endblock %}
+
 
 
 
