--- a/AutoCmdb/templates/user/user_edit.html
+++ b/AutoCmdb/templates/user/user_edit.html
@@ -59,7 +59,7 @@
 
             <div class="form-group col-md-6">
                 <label class="col-form-label">編號</label>
-                <input disabled type="number" name="code" class="form-control" placeholder=""
+                <input  type="number" name="code" class="form-control" placeholder=""
                        value="{{ userinfo_obj.dent.block_number }}{{ userinfo_obj.code }}">
             </div>
 
@@ -98,24 +98,32 @@
 
             <div class="form-group">
                 <label> 登入功能</label>
+
+                {% if forms_user_obj.is_staff.value == "True" %}
+
+                    <button id="change_passwd" type="button" class="btn btn-success" style="margin-left: 20px">更改密碼
+                    </button>
+                {% endif %}
             </div>
 
-            <div class="form-inline" style="padding-right: 15px; ">
+
+            <div class="form-inline">
                 <label class="col-md-2  col-form-label">狀態</label>
 
-               {{ forms_user_obj.is_staff }}
+                {{ forms_user_obj.is_staff }}
+
             </div>
 
-            <div class="form-inline" style="padding-right: 15px; ">
+
+            <div class="form-inline" style="padding-right: 15px; display: none">
                 <label class="col-md-2  col-form-label">密碼</label>
 
                 {{ forms_user_obj.password1 }}
             </div>
 
 
-            <div class="form-inline" style="padding-right: 15px; ">
+            <div class="form-inline" style="padding-right: 15px; ; display: none">
                 <label class="col-md-2  col-form-label">確認密碼</label>
-
                 {{ forms_user_obj.password2 }}
             </div>
 
@@ -146,12 +154,17 @@
 
 
         $("input[name='birthday']").datepicker(
-                {
-                    language: 'zh-TW',
-                    format: "yyyy-mm-dd",
-                    todayHighlight: true,
+            {
+                language: 'zh-TW',
+                format: "yyyy-mm-dd",
+                todayHighlight: true,
 
-                });
+            });
+
+        $("#change_passwd").bind("click", function (e) {
+            $("[name='password1']").closest(".form-inline").show();
+            $("[name='password2']").closest(".form-inline").show();
+        });
 
     </script>
 
