--- a/AutoCmdb/templates/user/user_add.html
+++ b/AutoCmdb/templates/user/user_add.html
@@ -53,7 +53,7 @@
 
 
             <!-- 錯誤提示-->
-            <div class="alert alert-danger">
+            <div class="alert" style="display: none">
                 <strong></strong>
             </div>
 
@@ -112,16 +112,15 @@
             <div class="form-group">
                 <label> 登入功能</label>
 
-                {% if forms_obj.is_staff.value == "True" %}
 
-                    <button id="change_passwd" type="button" class="btn btn-success" style="margin-left: 20px">更改密碼
-                    </button>
-                {% endif %}
+                <button id="change_passwd" type="button" class="btn btn-success"
+                        style="margin-left: 20px;display: none">設定密碼
+                </button>
+
             </div>
 
 
             <div class="form-inline ">
-
                 <label class="col-md-2  col-form-label">狀態</label>
                 {{ forms_obj.is_staff }}
 
@@ -149,6 +148,38 @@
     </div>
 
 
+
+
+    <!--- 新增完成 表單-->
+    <div class="modal fade" id="Modal">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">新增成功</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    是否還需要繼續新增資料
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <a href="{% url 'user' %}" class="btn btn-primary"  role="button">返回列表</a>
+                    <a href="{% url 'user_add' %}" class="btn btn-success"  role="button">繼續新增</a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+
 {% endblock %}
 
 
@@ -170,11 +201,6 @@
                 todayHighlight: true,
 
             });
-
-        $("#change_passwd").bind("click", function (e) {
-            $("[name='password1']").closest(".form-inline").show();
-            $("[name='password2']").closest(".form-inline").show();
-        });
 
 
         // 選擇部門後請求該用戶編號
@@ -230,8 +256,9 @@
                     console.log(callback);
 
                     if (callback.status == 'ok') {
-
-                        $("#userform_add .alert-danger strong").text(callback.msg);
+                        $(".alert").show();
+                        $(".alert strong").text(callback.msg);
+                        $(".alert").addClass("alert-success").removeClass("alert-danger");
                         $.each(callback.success_fields, function (i, val) {
 
                             input_tag = $("#userform_add [name='" + val + "']");
@@ -241,9 +268,14 @@
 
                         });
 
+                        $("#Modal").modal('show')
+
 
                     } else {
-                        $("#userform_add .alert-danger").show();
+                        $(".alert").show();
+                        $(".alert").addClass("alert-danger");
+                        $(".alert strong").text(callback.msg);
+
                         $("#userform_add .alert-danger strong").text(callback.msg);
 
                         console.log(callback.errors_fields);
@@ -272,11 +304,30 @@
 
                 },
                 error: function () {
+                    $(".alert").show();
+                    $(".alert").addClass("alert-danger");
+                    $(".alert strong").text("輸入錯誤");
+
 
                 }
             });
             e.preventDefault();
         });
+
+
+        function ch_passwd_ele(e) {
+
+            console.log(e.value);
+
+            if (e.value == "True") {
+                $("[name='password1']").closest(".form-inline").show();
+                $("[name='password2']").closest(".form-inline").show();
+            } else {
+                $("[name='password1']").closest(".form-inline").hide();
+                $("[name='password2']").closest(".form-inline").hide();
+            }
+
+        }
 
 
     </script>
