--- a/AutoCmdb/templates/asset/index.html
+++ b/AutoCmdb/templates/asset/index.html
@@ -33,9 +33,11 @@
         <div class="row">
 
             <div class="col-md-4">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#assetform_add_Modal">
-                    新增資產
-                </button>
+
+
+                <a href="{% url 'asset_add' %}" class="btn btn-primary" role="button">新增資產</a>
+
+
             </div>
 
             <!-- 篩選 -->
@@ -187,10 +189,16 @@
 
 
                     <!-- TODO  狀態 --->
-                    <td></td>
+                    <td name="status">
+
+                        {{ asset.get_status_display }}
+
+                    </td>
 
                     <td>
-                        <i class="fas fa-pen"></i>
+
+                        <a href="{% url 'asset_edit' asset.id %}"><i class="fas fa-pen"></i></a>
+
 
                     </td>
                 </tr>
@@ -200,7 +208,7 @@
 
 
             <tfoot>
-            <th colspan="7">
+            <th colspan="8">
                 <nav aria-label="Page navigation">
                     <ul class="pagination pull-right">
                         {% get_pageer asset_obj search_field %}
@@ -523,42 +531,7 @@
 
         });
 
-        //編輯 EditData : Change icon
-        $("#mytable").on('click', ".fa-pen", function (ele) {
-            console.log('edit');
-            $(this).attr('data-icon', 'file');
-            tds = $(this).parent().prevAll();
-            tr = $(this).closest("tr");
-            var obj_id = tr.find("[name='id']").text();
-            //console.log(obj_id);
 
-            $.each(tds, function (i, ele) {
-                var span_tag = $(this).find("span");
-                var input_tag = $(this).find("input");
-
-                select_list = ['department', 'manager'];
-                input_list = ['price', 'purchase_date'];
-
-
-                n = $(this).attr("name");
-
-                if (select_list.includes(n)) {
-
-                    //console.log(n);
-                    span_tag.hide();
-                    $(this).find('select').show();
-
-                }
-
-
-                if (input_list.includes(n)) {
-                    span_tag.hide();
-                    //console.log(span_tag);
-                    input_tag.val($.trim(span_tag.text()));
-                    input_tag.show()
-                }
-            })
-        });
 
 
         //SaveData : PUT
